crates/config-derive/tests/ui/union.stderr
error: unions are not supported with #[derive(Merge)]
  --> ./tests/ui/union.rs:23:10
   |
23 | #[derive(noelware_config_derive::Merge)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `noelware_config_derive::Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
